styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* =============Navbar styling section====================== */
.overall-container {
  display: grid;
  grid-template-rows: repeat(1, 1fr);
}

header {
  background: #c5541b;
  margin: 0;
}

.nav-bar {
  background: #3c3a39;
  margin: 0 auto;
  top: 0;
  left: 0;
  right: 0;
  position: fixed;
  z-index: 9999;
}

.nav-bar ul {
  display: flex;
  list-style-type: none;
  align-items: center;
  height: 10vh;
}

.toggle-nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-top: 5%;
}

.toggle-nav ul {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  height: 25%;
  padding-top: 10%;
  width: 25%;
  margin-top: 20%;
  margin-left: 10%;
  list-style-type: none;
  color: #fff;
}

.toggle-nav ul li {
  height: 24px;
  font-size: 32px;
  line-height: 44px;
}

#toggle-close {
  float: right;
  padding-top: 3%;
  margin-right: 17%;
  color: #fff;
}

/* ================== Styleling the flex elements ============================== */

.nav-bar ul li {
  text-decoration: none;
  flex: 1;
}

/* ================== hiding the hambuger icon in large screen ==================== */

.social-ul li a {
  color: #dbd8d7;
}

.contact-social-ul li a {
  color: #505f79;
  margin-right: 10px;
}

.nav-bar ul li a {
  text-decoration: none;
  color: white;
  font-family: Roboto, Tahoma, sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  line-height: 24px;
  text-align: center;
}

ul #name {
  flex: 5;
  margin-left: 30px;
}

/* =========================styling the main container ===================== */
.main-container {
  background-image: url("../images/bg.png");
  background-repeat: no-repeat;
  background-size: 100% 100%, cover;
  background-position: right -3% bottom 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  background-color: #1c1a19;
  width: 100%;
  height: 100vh;
}

.nav-bar #name a {
  font-family: Roboto, Tahoma, sans-serif;
  font-weight: bold;
  font-size: 18px;
}

.right-item {
  display: none;
}

.js-focus-visible:focus {
  outline: none;
}

.nav-bar ul .hamburger-icon {
  display: block;
  color: white;
  margin-right: 5%;
}

.main-container .intro-header {
  margin-left: 10px;
  color: #ff6b00;
}

.main-container .intro-header h1 {
  width: 100%;
  height: 55%;
  font-family: "Crete Round", serif;
  font-style: normal;
  font-weight: normal;
  font-size: 40px;
  line-height: 110%;
  letter-spacing: 0.37px;
  margin-left: 10px;
}

.intro-title {
  font-family: Roboto, Tahoma, sans-serif;
  font-style: normal;
  font-weight: bold;
  color: #fff5e1;
  font-size: 18px;
}

.intro-detail {
  align-self: flex-start;
  width: 100%;
  margin-left: 10px;
}

.intro-detail p {
  position: static;
  width: 90%;
  height: 65%;
  font-family: Poppins, Tahoma, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
  color: #fff;
  padding-top: 10px;
}

.social ul {
  display: flex;
  list-style-type: none;
  width: 50%;
  margin-left: 20px;
  justify-content: space-between;
}

/* ================== Portfolio projects section ====================================== */
.job-item-with-btn {
  display: flex;
  flex-direction: column;
  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("../images/print-img.png");
  background-repeat: no-repeat;
  background-size: cover;
  width: 97vw;
  height: 70vh;
  margin: auto;
  padding-top: 100px;
  margin-top: 60px;
}

.my-projects-section {
  padding-top: 15%;
  display: grid;
  padding-bottom: 5%;
}

.inner-job-item-two {
  display: grid;
}

.my-projects-section #projects-title {
  font-family: Crete Round, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 1.8em;
  line-height: 1.5em;
  display: flex;
  align-items: center;
  color: #1c1a19;
  margin-left: 10%;
  margin-right: 7%;
  padding-bottom: 5%;
  margin-top: 15%;
  border-bottom: solid #1c1a19 1px;
}

.multi-post-inner {
  width: 85%;
  margin-left: 8%;
}

.multi-post img {
  display: block;
  margin: auto;
  margin-top: 5%;
  width: 85%;
}

.multi-post {
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  width: 100%;
  margin-left: 2%;
  padding-bottom: 15%;
}

.post-title {
  color: #091e42;
  font-family: Crete Round, sans-serif;
  font-size: 32px;
  line-height: 44px;
  margin: 12px;
}

.post {
  font-family: Inter, sans-serif;
  font-size: 16px;
  line-height: 24px;
  color: #091e42;
  margin: 12px;
}

.tech-lang ul {
  display: flex;
  justify-content: flex-start;
  list-style-type: none;
  width: 90%;
  margin-bottom: 25px;
}

.tech-lang ul li {
  font-size: 15px;
  line-height: 15px;
  font-family: "Inter", sans-serif;
  font-weight: 400;
  border: 1px solid #8993a4;
  background: #fff;
  padding: 8px 10px;
  margin: 10px;
}

.tech-lang ul #last-child {
  margin-right: 55px;
}

#post-btn {
  background: #ff6b00;
  border: none;
  width: 124px;
  height: 40px;
  margin: 12px;
  font-family: "Inter", sans-serif;
  font-weight: bold;
  font-size: 17px;
  line-height: 24px;
  color: #fff;
  cursor: pointer;
  text-decoration: none;
  padding: 15px;
  margin-top: 15px;
  transition: all 1s ease-in-out 0s;
}

.long-link {
  height: 13%;
  text-decoration: none;
  background: #ff6b00;
  width: 100%;
  text-align: center;
  padding-top: 5%;
  color: #fff;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 17px;
  margin-top: 17.65%;
  padding-bottom: 10%;
}

#post-btn:hover {
  background-color: rgb(255, 255, 255);
  color: #ff6b00;
  border: 2px solid #ff6b00;
}

#post-btn:active {
  background-color: rgb(12, 110, 56);
}

.job-post-title {
  width: 295px;
  height: 81px;
  font-family: Crete Round, sans-serif;
  font-size: 32px;
  line-height: 44px;
  color: #fff;
  font-style: normal;
  font-weight: 400;
  margin-left: 20px;
  margin-bottom: 10px;
}

.job-post {
  font-size: 16px;
  line-height: 24px;
  width: 295px;
  height: 87px;
  color: #fff;
  margin-left: 23px;
  font-family: "Inter", sans-serif;
}

.job-tech-lang-ul {
  display: flex;
  margin-left: 22px;
  margin-top: 18px;
  margin-bottom: 25px;
  list-style-type: none;
}

.job-item {
  font-size: 15px;
  line-height: 20px;
  font-family: "Inter", sans-serif;
  font-weight: 500;
  border: none;
  background: rgba(255, 255, 255, 0.24);
  align-items: center;
  padding: 10px 12px;
  margin-right: 20px;
  color: #fff;
  margin-bottom: 20px;
}

.see-jobs-btn {
  background: #ff6b00;
  height: 68px;
  border: none;
  width: 100%;
  margin: auto;
  color: #fff;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 17px;
  line-height: 24px;
  cursor: pointer;
  margin-top: 85px;
  padding-bottom: 10%;
}

.see-jobs-btn:hover {
  background-color: crimson;
}

.see-jobs-btn:active {
  background-color: rgb(12, 110, 56);
}

/* ================== End of Portfolio projects section ====================================== */

/* ================= About ME page styling ================================== */

.about-me-section {
  background-image: url("../images/illustration-about-me-mobile.svg");
  background-repeat: no-repeat;
  background-position: right 2% top -8%;
  width: 100%;
  height: 100%;
  background-color: #1c1a19;
  margin-top: 8%;
  background-size: 40% 50%, cover;
  display: flex;
  flex-direction: column;
  padding-bottom: 10%;
}

.about-title {
  font-family: Crete Round, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 350%;
  line-height: 100%;
  color: #ff6b00;
  padding: 5%;
  padding-top: 10%;
  margin-top: 5%;
  text-align: center;
}

.about-para {
  display: block;
  margin: auto;
  width: 90%;
  height: 148px;
  color: #f4f5f7;
  font-size: 16px;
  line-height: 24px;
  font-family: Poppins, Tahoma, sans-serif;
  margin-bottom: 25px;
}

#get-resume-btn {
  width: 50%;
  margin-left: 5%;
  background: #ff6b00;
  border: none;
  padding: 3%;
  font-family: Inter, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 100%;
  line-height: 150%;
  color: #fff;
  margin-bottom: 40%;
  cursor: pointer;
  transition: all 300ms ease 0ms;
  border-radius: 5px;
}

#get-resume-btn:hover {
  background-color: rgb(255, 255, 255);
  color: #ff6b00;
  border: 1px solid #ff6b00;
}

#get-resume-btn:active {
  background-color: rgb(12, 110, 56);
}

#btn-line {
  margin-left: 25px;
  width: 85vw;
  border-bottom: 1px solid #fff;
  margin-bottom: 50px;
}

/* ================= End of About ME page styling ================================== */

/* ================= List of technologies section ================================= */

.language,
.framework,
.skills {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.language-header,
.framework-header,
.skills-header {
  font-family: "Open Sans", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
  color: #fff;
  margin-bottom: 20px;
}

.language ul,
.framework ul,
.skills ul {
  list-style-type: none;
}

.language ul li,
.framework ul li,
.skills ul li {
  color: #fff;
  font-family: Inter, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 22px;
  line-height: 43px;
  margin-bottom: 10px;
}

span {
  margin-right: 10px;
}

.skills-header {
  margin-right: 33px;
}

/* ================= End of List of technologies section ================================= */

/* ========= Styling for contact form =========== */
.contact-section {
  width: 99.98%;
  height: 100%;
  background: #e5e5e5;
  display: flex;
  flex-direction: column;
  padding-top: 45px;
}

.message-box {
  width: 80%;
  margin: 0 auto;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 150%;
  line-height: 150%;
  text-align: center;
  padding-top: 2%;
}

.form-container {
  display: block;
  text-align: center;
  border-bottom: solid 1px #8d8d8f;
}

form {
  display: inline-block;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #e5e5e5;
}

form #btn-submit {
  width: 50%;
  height: 6vh;
  background: #ff6b00;
  margin-top: 2%;
  margin-bottom: 10%;
  border: none;
  color: #fff;
  cursor: pointer;
}

form #btn-submit:hover {
  background-color: #fff5e1;
  color: #f55800;
}

form #btn-submit:active {
  background-color: rgb(12, 110, 56);
}

#first-name-desktop {
  visibility: hidden;
  height: 0;
  width: 0;
  position: absolute;
}

#lastname-desktop {
  visibility: hidden;
  height: 0;
  width: 0;
  position: absolute;
}

input[type="text"],
input[type="email"],
textarea {
  width: 90%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: none;
  box-sizing: border-box;
  background-color: #e5e5e5;
  font-family: Inter, sans-serif;
}

textarea {
  background-color: #dbd8d7;
}

input[type="text"],
input[type="email"] {
  border-bottom: solid 2px #fbf8f7;
}

.contact-social {
  background: #e5e5e5;
  padding-top: 20px;
  padding-bottom: 20px;
}

.contact-social-ul {
  display: flex;
  justify-content: center;
  list-style-type: none;
}

/* ========= End of Styling for contact form =========== */

